--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
   <h1>Books, mandatory reading list</h1>
   <ol id="myList"></ol>
+  <div id="errorMessage" style="color: red"></div>
 
   <p>
     Sort by:
